application/static/css/main.css
/**
 * @file
 * Main stylesheet file.
 */


/*****************************************************************************
 * Main elements
 ****************************************************************************/
html body{
    width: 100%;
    height: 100%;
    font-weight: 300;
}
    overflow-y: scroll;
}
.navbar{
    font-size: 1.2em;
}
a {
  cursor: pointer;
}
::selection {
  background: #555;
  color: #FFF;
}
::-moz-selection {
  background: #555;
  color: #FFF;
}
::-webkit-selection {
  background: #555;
  color: #FFF;
}


/*Default Color Schemes for Dashboard*/

/* Main elements end */


/*****************************************************************************
 * Various other styles
 ****************************************************************************/
 .stack-badge {
  text-align: center;
  margin-bottom: 15px;
  height: 250px;
  position: relative;
}
.navbar{
    min-height: 33px !important;
    margin-bottom: 0;
    border-radius: 0;
}
/* Various other styles end */
/* nav-bar custom color scheme*/
.navbar-default {
  background-color: #34495e;
  border-color: #2c3e50;
}
.navbar-default .navbar-brand {
  color: #ffffff;
}
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
  color: #ecdbff;
}
.navbar-default .navbar-text {
  color: #ffffff;
}
.navbar-default .navbar-nav > li > a {
  color: #ffffff;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #ecdbff;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color: #ecdbff;
  background-color: #2c3e50;
}
.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
  color: #ecdbff;
  background-color: #2c3e50;
}
.navbar-default .navbar-toggle {
  border-color: #2c3e50;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: #2c3e50;
}
.navbar-default .navbar-toggle .icon-bar {
  background-color: #ffffff;
}
.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
  border-color: #ffffff;
}
.navbar-default .navbar-link {
  color: #ffffff;
}
.navbar-default .navbar-link:hover {
  color: #ecdbff;
}

@media (max-width: 767px) {
  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
    color: #ffffff;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
    color: #ecdbff;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #ecdbff;
    background-color: #2c3e50;
  }
}

/*landing page for home*/
.banner {
    background: url(/static/img/bg-jumbotron.png) no-repeat center center fixed;
    display: table;
    height: 100%;
    width: 100%;
    padding: 10% 0 10% 0;
    position: relative;
    background-size: cover;
}
.landing-text{
    color: #FFF;
    padding-top: 5%;
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}
.landing-text h1{
    font-size: 500%;
    font-weight: 700;
}
.landing-text h2{
    color: #78c9cf;
    font-weight: 300;
    padding: 2% 0 2% 0;
}
.banner-foot{
    background: rgba(0,0,0,.3);
    font-weight: 300;
    text-align: center;
    padding: 1% 0 1% 0;
}
.padding{
    padding: 80px 0;

}
.padding img{
    width: 100%;
}

/* styles for foooter*/
#footer{
    width: 100%;
    background-color: #23415C;
    padding: 5% 5% 10% 5%;
    color: #FFF;
}
.fa{
    padding: 15px;
    font-size: 25px;
    color: #FFF;
}
.fa:hover{
    color: #D5D5D5;
    text-decoration: none;
}

